--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hapi": "^8.8.0"
+    "bcrypt": "^0.8.4",
+    "hapi": "^8.8.0",
     "hapi-mongodb": "^3.0.0"
   }
 }
