--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^0.8.4",
+    "handlebars": "^3.0.3",
     "hapi": "^8.8.0",
-    "hapi-mongodb": "^3.0.0"
+    "hapi-mongodb": "^3.0.0",
+    "joi": "^6.6.1",
+    "path": "^0.11.14",
+    "yar": "^3.0.3"
   }
 }
